@@ -5,4 +5,27 @@ ID=Value
 
 ID2=Value2
 
+; quote
+
 ID3="Value3"
+
+; Continuous lines
+
+ID4=Value4
+Continued Value4
+ID5=Value5
+ Continued Value5 start with space
+More Continued Value5
+
+# corner cases
+
+[ID6]=Value6
+
+;1;=NotValue
+
+#2#=NotValue
+ #3#=NotValue
+
+ID7=Value7 # not comment
+
+Value without ID
